scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest04.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest04;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<x:=3>"
{
	1(y:int) from A to B; @"(y = x)"
	2(z:int) from A to B; @"(z = x)"
}
//*/
